# edvart

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  api-example.ipynb  api-example.md  cliff.toml  prototype.ipynb  prototype.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yaml  test.yaml
docs/: Makefile  advanced.rst  api_reference.rst  conf.py  getting_started.rst  index.rst  installation.rst  sections.rst  usage.rst
edvart/: __init__.py  config.py  data_types.py  decorators.py  example_datasets.py  export_utils.py  pandas_formatting.py  plots.py  report.py  utils.py
edvart/report_sections/: __init__.py  bivariate_analysis.py  code_string_formatting.py  dataset_overview.py  group_analysis.py  multivariate_analysis.py  section_base.py  table_of_contents.py  umap.py  univariate_analysis.py
edvart/report_sections/timeseries_analysis/: __init__.py  autocorrelation.py  boxplots_over_time.py  fourier_transform.py  rolling_statistics.py  seasonal_decomposition.py  short_time_ft.py  stationarity_tests.py  time_analysis_plot.py  time_series_line_plot.py  timeseries_analysis.py
example-datasets/: global_temp.csv  pollution.csv
examples/: time-series-report-example.ipynb  time-series-report-exported.ipynb
prototypes/: example-data-types.ipynb
tests/: __init__.py  execution_utils.py  pyarrow_utils.py  test_bivariate_analysis.py  test_data_type_inference.py  test_decorators.py  test_example_datasets.py  test_group_analysis.py  test_multivariate_analysis.py  test_overview_section.py  test_report.py  test_smoke.py  test_timeseries_analysis.py  test_univariate_analysis.py  test_univariate_analysis_section.py  test_utils.py
