[tool.poetry]
name = "edvart"
version = "0.0.0"  # DO NOT CHANGE - managed by Git tags and CI
license = "MIT"
repository = "https://github.com/datamole-ai/edvart"
description = "Effective data visualization and reporting tool"
authors = ["Michal Belak <michal.belak@datamole.ai>"]
include = ["example-datasets/*.csv"]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
ipykernel = "*"
pandas = "^1.5"
numpy = "*"
matplotlib = "*"
seaborn = "^0.12"
plotly = ">=4.0.0, <6"
statsmodels = ">0.10.2"
nbformat = "*"
ipywidgets = "^7.5"
colorlover = "*"
scikit-learn = ">=0.22.1"
nbconvert = "^7.0.0"    # Required for exporting to HTML
umap-learn = { version = "^0.5.0", optional = true}
numba = { version = "^0.57", optional = true }

[tool.poetry.extras]
umap = ["umap-learn", "numba"]
all = ["umap-learn", "numba"]

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
pytest = "~7.1.0"
sphinx = "~4.3.0"
sphinx-rtd-theme = "~1.0.0"
toml = "^0.10.0"
jupyter = "*"
black = "^22.3.0"
pylint = "^2.14.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
