[tool.poetry]
name = "edvart"
version = "0.0.0"  # DO NOT CHANGE - managed by Git tags and CI
license = "MIT"
repository = "https://github.com/datamole-ai/edvart"
description = "Effective data visualization and reporting tool"
authors = ["Michal Belak <michal.belak@datamole.ai>"]
include = ["example-datasets/*.csv"]
exclude = ["tests"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
ipykernel = "*"
pandas = [
    { version = ">=1.5, <2.1", python = "~3.8" },
    { version = ">=1.5, <2.3", python = ">=3.9" }
]
numpy = "*"
matplotlib = "^3.3"
seaborn = "^0.13"
plotly = ">=4.0.0, <6"
statsmodels = ">0.10.2"
nbformat = "*"
ipywidgets = ">=7.5, <9"
colorlover = "*"
scikit-learn = ">=0.22.1"
nbconvert = "^7.0.0"    # Required for exporting to HTML
umap-learn = { version = "^0.5.4", optional = true}
# umap-learn dependes on numba. It is specified explicitly to install
# a newer version, since by default it installs an older version of numba,
# which also installs an older version of llmvlite, which is incompatible
# with newer version of LLVM binaries.
numba = { version = "^0.57", optional = true }
pyarrow = { version = "^14.0.1", optional = true }
isort = "^5.10.1"
strenum = { version = "^0.4.15", python = "<3.11" }

[tool.poetry.extras]
umap = ["umap-learn", "numba"]
arrow = ["pyarrow"]
all = ["umap-learn", "numba", "pyarrow"]

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8"
pytest = "~8.0"
sphinx = "~7.1"
sphinx-rtd-theme = "~1.3.0"
toml = "^0.10.0"
jupyter = "*"
black = "^22.3.0"
pylint = "^2.14.3"
sphinx-copybutton = "^0.5.2"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
